--- a/Pages/Survey.cshtml
+++ b/Pages/Survey.cshtml
@@ -4,15 +4,15 @@
     ViewData["title"] = "survey";
     string[] hobbies = new string[] { "Reading", "Watching movies", "Listening to music" };
     <form>
-            <label for="fname">First name:</label> <br>
+            <label class="form-label" for="fname">First name:</label> <br>
         <input type="text" id="fname" name="fname"> <br>
         @{}
         @for (int i = 0; i < @hobbies.Length; i++)
         {
-            <input type="checkbox" id="hobby1" name="Hobby1" value="@hobbies[i]">
-            <label for="hobby1">@hobbies[i]</label> <br> <br>
+            <input class="form-check form-check-label" type="checkbox" id="hobby1" name="Hobby1" value="@hobbies[i]">
+            <label class="form-label" for="hobby1">@hobbies[i]</label> <br> <br>
         }
-        <input type="submit" value="Submit">
+        <input class="btn btn-success" type="submit" value="Submit">
     </form>
 }
 
